# claude-hooks

./: .gitattributes  .gitignore  .mcp.json  .sos-stack.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.json
.claude/agents/: advisory-watch.md  architect.md  boundary-check.md  orchestrator.md  worker.md
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  BACKLOG.md  DISCOVERIES.md  PROJECT.md  SOS_KIT_FEEDBACK.md
docs/discoveries/: P001.md  P002.md  P003.md  P004.md  P005.md  P006.md  P007.md  P008.md  P010.md
docs/handoff/: SOS_KIT_HANDOFF.md
docs/ticket/: P008-ship-prep.md  P010-architect-guard-true-parity.md
docs/ticket/done/: P001-scaffold-cli.md  P002-architect-guard.md  P003-block-env-edit.md  P004-block-unsafe-merge.md  P005-session-banner.md  P006-serve-mcp.md  P007-why-blocked.md
hooks/: pre-commit
scripts/: architect-guard.sh  block-env-edit.sh  block-unsafe-merge.sh  install-hooks.sh  security-gate.sh  session-start-banner.sh
src/: io.rs  main.rs  serve.rs
src/hooks/: mod.rs
tests/: cli.rs  mcp_handshake.rs
